--- a/main.html
+++ b/main.html
@@ -10,6 +10,31 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form method="POST">
+  <label for="name">Name</label><br>
+  <input type="text" id="name" required><br>
+  <label for="email">Email</label><br>
+  <input type="email" id="email" required><br>
+  <label for="password">Password</label><br>
+  <input type="password" id="password" required><br>
+  <label for="cars">Car Brands</label><br>
+  <select id="cars" required>
+    <option value="BMW">BMW</option>
+    <option value="Audi">Audi</option>
+    <option value="Mercedez">Mercedez</option>
+  </select><br>
+  <label for="carage">Car Age</label><br>
+  <input type="number" id="carage" required><br>
+  <label for="dop">Date of Purchase</label><br>
+  <input type="date" id="dop" required><br>
+  <br>
+  <label for="gender">Gender</label><br>
+  <input type="radio" name="gender" value="male" required> Male<br>
+  <input type="radio" name="gender" value="female" required> Female<br>
+  <input type="radio" name="gender" value="other" required> Other<br>
+  <br>
+  <button type="submit">Submit</button>
+</form> 
 
 </body>
 
